# dopy

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  do.py  pyproject.toml  pyrightconfig.json
.github/workflows/: release.yml
dopy/: __init__.py  __main__.py  app.py  command.py  command_helper.py  command_loader.py  command_utils.py  config.py  exception.py
tests/: test_app_e2e.py  test_app_error.py  test_command_decorators.py  test_command_helper.py  test_command_loader.py  test_command_utils.py
